<resources>
    <string name="app_name">Account Manager</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in/Register</string>
    <string name="action_sign_in_short">Sign in/Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="action_finish">OK</string>
    <string name="token_state">gloobah</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_account">Account Number</string>
    <string name="account_update">Update</string>
    <string name="account_cancel">Cancel</string>

</resources>
