<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"


    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_fname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_lname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_account"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="212dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/account_update_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_update"
                    android:textStyle="bold"
                    tools:layout_conversion_absoluteHeight="114dp"
                    tools:layout_editor_absoluteY="250dp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_conversion_absoluteWidth="88dp" />

                <Button
                    android:id="@+id/account_cancel_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_cancel"
                    android:textStyle="bold"
                    tools:layout_conversion_absoluteHeight="120dp"
                    tools:layout_editor_absoluteY="247dp"
                    tools:layout_editor_absoluteX="104dp"
                    tools:layout_conversion_absoluteWidth="88dp" />

                <Button
                    android:id="@+id/account_query_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Query" />

                <Button
                    android:id="@+id/account_logout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="logout"
                    tools:layout_conversion_absoluteHeight="143dp"
                    tools:layout_conversion_absoluteWidth="203dp"
                    tools:layout_editor_absoluteX="192dp"
                    tools:layout_editor_absoluteY="220dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
